--- a/acceptance.suite.yml
+++ b/acceptance.suite.yml
@@ -5,12 +5,9 @@ modules:
         - \Helper\Acceptance
     config:
         WebDriver:
-            url: 'http://localhost/'
-            browser: phantomjs
-            clear_cookies: true
-            restart: true
-            window_size: 320x450
+            url: 'http://local.goo-net.com/'
+            browser: chrome
             capabilities:
-              webStorageEnabled: true
-              phantomjs.page.settings.userAgent: "Mozilla/5.0 (iPhone; CPU iPhone OS 11_0 like Mac OS X) AppleWebKit/604.1.38 (KHTML, like Gecko) Version/11.0 Mobile/15A372 Safari/604.1"
-              unexpectedAlertBehaviour: 'accept'
+                chromeOptions: # additional chrome options
+                  args: ["--headless", "--disable-gpu", "--no-sandbox"]
+                  binary: "/usr/bin/google-chrome-stable"
